--- a/BIDS_07_ClassificationRegression_1.ipynb
+++ b/BIDS_07_ClassificationRegression_1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Aim to complete parts of this tutorial on your own *before* the practical session.\n",
+    "Aim to complete as much of this tutorial on your own *before* coming to the practical session.\n",
     "\n",
     "Use the practical session to get help for any aspect you do not understand or were unable to complete."
    ]
@@ -21,7 +21,7 @@
    "metadata": {},
    "source": [
     "Learning objectives\n",
-    "1. Implement PLS, ridge, and lasso and elastic net using the popular python library [sklearn](https://scikit-learn.org/stable/)\n",
+    "1. Implement PLS, Ridge, and Lasso and Elastic Net regression using the popular python library [sklearn](https://scikit-learn.org/stable/)\n",
     "2. Visualise the regression results \n",
     "3. Explore different metrics to evaluate the model performance in regression settings\n",
     "4. Investigate the effect of scaling the data on the model performance\n",
@@ -185,7 +185,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## PLS Regression "
+    "## PLS Regression \n",
+    "\n",
+    "We will first look at [PLSRegression()](https://scikit-learn.org/stable/modules/generated/sklearn.cross_decomposition.PLSRegression.html)."
    ]
   },
   {
@@ -194,9 +196,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pls2 = PLSRegression(n_components=1)\n",
-    "pls2.fit(X_train_scaled, y_train)\n",
-    "y_pred = pls2.predict(X_test_scaled)"
+    "plsr = PLSRegression(n_components=1)\n",
+    "plsr.fit(X_train_scaled, y_train)\n",
+    "y_pred = plsr.predict(X_test_scaled)"
    ]
   },
   {
@@ -271,7 +273,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cv = RepeatedKFold(n_splits=10, n_repeats=1, random_state=123)\n",
+    "cv = RepeatedKFold(n_splits=10, n_repeats=1, random_state=42)\n",
     "\n",
     "mse = []\n",
     "n = len(X_train)\n",
@@ -316,7 +318,7 @@
     "MAEs = []\n",
     "SMAPEs = [] \n",
     "from sklearn.model_selection import KFold\n",
-    "kf = KFold(n_splits=2, random_state=42, shuffle=False)\n",
+    "kf = KFold(n_splits=2, random_state=CID, shuffle=False)\n",
     "kf.get_n_splits(X_train_scaled)\n",
     "for train_index, test_index in kf.split(X_train):\n",
     "    \n",
@@ -457,9 +459,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pls2 = PLSRegression(n_components=3)\n",
-    "pls2.fit(X_train_scaled, y_train)\n",
-    "y_pred = pls2.predict(X_test_scaled)\n",
+    "plsbest = PLSRegression(n_components=3)\n",
+    "plsbest.fit(X_train_scaled, y_train)\n",
+    "y_pred = plsbest.predict(X_test_scaled)\n",
     "printPerformance(y_test, y_pred)"
    ]
   },
@@ -481,7 +483,7 @@
    "outputs": [],
    "source": [
     "# get feature coefficients\n",
-    "coef = pls2.coef_\n",
+    "coef = plsbest.coef_\n",
     "# get feature names\n",
     "cnames = list(X.columns)\n",
     "# sort these\n",
@@ -503,7 +505,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Lasso "
+    "## Lasso \n",
+    "\n",
+    "Now we will use the [Lasso()](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.Lasso.html) function."
    ]
   },
   {
@@ -594,7 +598,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Try right the above but using the Ridge() function. Click the three dots in the cell below will expand to show the result"
+    "Try right the same as the above but now using the [Ridge()](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.Ridge.html) function."
    ]
   },
   {
@@ -701,7 +705,7 @@
    "source": [
     "Elastic Net is a mix of both ridge and lasso, where we can tune both of the parameters.\n",
     "\n",
-    "Don't worry if the below code returns some warnings around the model not convering. However, do think about what this means"
+    "Don't worry if the code below (using the [ElasticNet()](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.ElasticNet.html) function) returns some warnings around the model not converging. However, do think about what this means..."
    ]
   },
   {
@@ -798,7 +802,7 @@
     "- Change certain paramaters such as number of folds, ncomponents (PLS), alpha and lambda values (Elastic net, Lasso, Ridge), e.g try a larger grid search \n",
     "- Use a different dataset for a regression problem\n",
     "- Implement different error metrics for regression\n",
-    "- Implement the classification versions of these, look at examples here https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.RidgeClassifier.html\n"
+    "- Implement the classification (logistic regression) versions of these, look at examples here for [Ridge](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.RidgeClassifier.html) and [Lasso and ElasticNet](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html), and you can use a binary vector as input to [PLSRegression](https://scikit-learn.org/stable/modules/generated/sklearn.cross_decomposition.PLSRegression.html)."
    ]
   },
   {
