--- a/README
+++ b/README
@@ -1,1 +1,2 @@
-
+# Classification and Regression 1
+This session introduces supervised learning and focusses on Partial Least Squares (PLS) and penalised (Lasso, Ridge, Elastic Net) regression methods.
