--- a/BIDS_07_ClassificationRegression_1.ipynb
+++ b/BIDS_07_ClassificationRegression_1.ipynb
@@ -151,7 +151,7 @@
    "outputs": [],
    "source": [
     "# Split the df into 80% train 20% test data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size= 0.20, random_state=CID)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.20, random_state=CID)"
    ]
   },
   {
@@ -220,7 +220,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# This is just a helper function to get the smap metric - no need to change \n",
+    "# This is just a helper function to get the smape metric - no need to change \n",
     "def smape(A, F):\n",
     "    out =  100/len(A) * np.sum(2 * np.abs(F - A) / (np.abs(A) + np.abs(F)))\n",
     "    return(out)"
@@ -285,8 +285,8 @@
     "               scoring='neg_mean_squared_error').mean()\n",
     "    mse.append(score)\n",
     "\n",
-    "#plot test MSE vs. number of components\n",
-    "plt.plot(mse)\n",
+    "#plot test MSE vs. number of components - lower is better (smaller error)\n",
+    "plt.plot(np.arange(1, 10),mse)\n",
     "plt.xlabel('Number of PLS Components')\n",
     "plt.ylabel('MSE')\n",
     "plt.title('Cross-validation Metrics')\n"
@@ -321,8 +321,9 @@
     "kf = KFold(n_splits=2, random_state=CID, shuffle=False)\n",
     "kf.get_n_splits(X_train_scaled)\n",
     "for train_index, test_index in kf.split(X_train):\n",
+    "    # add here code to estimate the optimal number of components from the training set\n",
     "    \n",
-    "''' add your own code here then investigate what I wrote below'''''"
+    "    "
    ]
   },
   {
@@ -332,12 +333,13 @@
    "outputs": [],
    "source": [
     "# Calculate MSE using cross-validation, \n",
+    "numSplits = 10\n",
     "exp_var_mean = 0 \n",
     "r_square_mean = 0\n",
     "MSE_mean = 0 \n",
     "MAE_mean = 0\n",
     "SMAPE_mean = 0 \n",
-    "kf = KFold(n_splits=10, random_state=None, shuffle=False)\n",
+    "kf = KFold(n_splits=numSplits, random_state=CID, shuffle=False)\n",
     "kf.get_n_splits(X_train)\n",
     "\n",
     "for train_index, val_index in kf.split(X_train):\n",
@@ -346,7 +348,7 @@
     "    y_traincv = y_train.iloc[train_index]\n",
     "    y_valcv = y_train.iloc[val_index]\n",
     "    X_traincv = scaler.fit_transform(X_traincv)\n",
-    "    X_valcv = scaler.fit_transform(X_valcv)\n",
+    "    X_valcv = scaler.transform(X_valcv)\n",
     "    pls = PLSRegression(n_components=2) ## i is the no. components, consider \n",
     "    pls.fit(X_traincv, y_traincv)\n",
     "    ypred = pls.predict(X_valcv)\n",
@@ -367,10 +369,10 @@
    "outputs": [],
    "source": [
     "## in the space below compute the mean and standard deviations of your metrics\n",
-    "## I have done the first one as an exaemple\n",
+    "## I have done the first one as an example\n",
     "\n",
-    "print(exp_var_mean/10)\n",
-    "print(r_square_mean/10)"
+    "print(exp_var_mean/numSplits)\n",
+    "print(r_square_mean/numSplits)"
    ]
   },
   {
@@ -440,7 +442,7 @@
    "outputs": [],
    "source": [
     "#plot test MSE vs. number of components\n",
-    "plt.plot(MSEs)\n",
+    "plt.plot(range(1,12),MSEs)\n",
     "plt.xlabel('Number of PLS Components')\n",
     "plt.ylabel('MSE')\n",
     "plt.title('Cross-validation Metrics')\n"
@@ -450,7 +452,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Results vary slightly depending on the split seed values, although it looks like the best model is the one with 3 components"
+    "Results vary slightly depending on the split seed values, although it looks like the best model is the one with 4 components? Do you get the same result? Do you want to use a different metric than MSE to find the optimum?"
    ]
   },
   {
@@ -459,7 +461,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plsbest = PLSRegression(n_components=3)\n",
+    "n_comp_opt = np.array(MSEs).argsort()[0]+1 # finding the index of the lowest value\n",
+    "plsbest = PLSRegression(n_components=n_comp_opt)\n",
     "plsbest.fit(X_train_scaled, y_train)\n",
     "y_pred = plsbest.predict(X_test_scaled)\n",
     "printPerformance(y_test, y_pred)"
@@ -507,7 +510,7 @@
    "source": [
     "## Lasso \n",
     "\n",
-    "Now we will use the [Lasso()](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.Lasso.html) function."
+    "Now we will use the [Lasso()](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.Lasso.html) function. We will optimise the model parameters using a [GridSearch](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.GridSearchCV.html)."
    ]
   },
   {
@@ -519,7 +522,7 @@
     "# define model\n",
     "model = Lasso()\n",
     "# define model evaluation method\n",
-    "cv = RepeatedKFold(n_splits=10, n_repeats=3, random_state=42)\n",
+    "cv = RepeatedKFold(n_splits=10, n_repeats=3, random_state=CID)\n",
     "# define grid\n",
     "grid = dict()\n",
     "grid['alpha'] = np.arange(0, 1, 0.01)\n",
@@ -530,6 +533,13 @@
     "# summarize\n",
     "print('MAE: %.3f' % (results.best_score_*-1))\n",
     "print('Config: %s' % results.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Predict the test set now, how does this compare with PLS?"
    ]
   },
   {
@@ -620,7 +630,7 @@
     "# define model\n",
     "model = Ridge()\n",
     "# define model evaluation method\n",
-    "cv = RepeatedKFold(n_splits=10, n_repeats=3, random_state=42)\n",
+    "cv = RepeatedKFold(n_splits=10, n_repeats=3, random_state=CID)\n",
     "# define grid\n",
     "grid = dict()\n",
     "grid['alpha'] = np.arange(0, 1, 0.01)\n",
@@ -696,6 +706,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Compare the Ridge results with Lasso and PLS, which model is most predictive, which are the important features?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Elastic-Net "
    ]
   },
@@ -705,7 +722,7 @@
    "source": [
     "Elastic Net is a mix of both ridge and lasso, where we can tune both of the parameters.\n",
     "\n",
-    "Don't worry if the code below (using the [ElasticNet()](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.ElasticNet.html) function) returns some warnings around the model not converging. However, do think about what this means..."
+    "Don't worry if the code below (using the [ElasticNet()](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.ElasticNet.html) function) returns some warnings around the model not converging. However, __do think about what this means...__ (could you change some parameters?)"
    ]
   },
   {
@@ -717,7 +734,7 @@
     "# define model\n",
     "model = ElasticNet()\n",
     "# define model evaluation method\n",
-    "cv = RepeatedKFold(n_splits=10, n_repeats=3, random_state=42)\n",
+    "cv = RepeatedKFold(n_splits=10, n_repeats=3, random_state=CID)\n",
     "# define grid\n",
     "grid = dict()\n",
     "grid = {\"max_iter\": [10, 50, 100],\n",
@@ -874,7 +891,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.16"
   }
  },
  "nbformat": 4,
