Added additional info on classification code
Suggestion of use of code-LLMs for converting regression code to classification equivalents

--- a/BIDS_07_ClassificationRegression_1.ipynb
+++ b/BIDS_07_ClassificationRegression_1.ipynb
@@ -312,18 +312,47 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "exp_vars = []\n",
-    "r_squares = []\n",
-    "MSEs = []\n",
-    "MAEs = []\n",
-    "SMAPEs = [] \n",
+    "n_comp = 10\n",
+    "n_split = 10\n",
+    "exp_vars = [0]*n_comp\n",
+    "r_squares = [0]*n_comp\n",
+    "MSEs = [0]*n_comp\n",
+    "MAEs = [0]*n_comp\n",
+    "SMAPEs = [0]*n_comp\n",
+    "\n",
     "from sklearn.model_selection import KFold\n",
-    "kf = KFold(n_splits=2, random_state=CID, shuffle=False)\n",
-    "kf.get_n_splits(X_train_scaled)\n",
-    "for train_index, test_index in kf.split(X_train):\n",
-    "    # add here code to estimate the optimal number of components from the training set\n",
-    "    \n",
-    "    "
+    "kf = KFold(n_splits=n_split, random_state=CID, shuffle=True)\n",
+    "kf.get_n_splits(X_train)\n",
+    "for train_index, val_index in kf.split(X_train):\n",
+    "    for i in np.arange(1,n_comp+1):\n",
+    "        Xtr = X_train.iloc[train_index,:]\n",
+    "        Xval = X_train.iloc[val_index,:]\n",
+    "        Ytr = y_train.iloc[train_index]\n",
+    "        Yval = y_train.iloc[val_index]\n",
+    "        scaler_cv = StandardScaler()\n",
+    "        Xtr_scaled = scaler_cv.fit_transform(Xtr)\n",
+    "        Xval_scaled = scaler_cv.transform(Xval)\n",
+    "        pls = PLSRegression(n_components=i)\n",
+    "        pls.fit(Xtr_scaled, Ytr)\n",
+    "        ypred = pls.predict(Xval_scaled)\n",
+    "        exp_var, r_square, MSE, MAE, SMAPE = RegmodelPerformance(Yval, ypred)\n",
+    "        exp_vars[i-1] += exp_var/n_split\n",
+    "        r_squares[i-1] += r_square/n_split\n",
+    "        MSEs[i-1] += MSE/n_split\n",
+    "        MAEs[i-1] += MAE/n_split\n",
+    "        SMAPEs[i-1] += SMAPE/n_split\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(np.arange(1, n_comp+1),MSEs)\n",
+    "plt.xlabel('Number of PLS Components')\n",
+    "plt.ylabel('MSE')\n",
+    "plt.title('Cross-validation metric')"
    ]
   },
   {
@@ -816,10 +845,61 @@
     "\n",
     "For further understanding and practice:\n",
     "- Try using a different scaling to see how it affects results: ```robust_scale``` / ```RobustScaler```, ```power_transform``` / ```PowerTransformer```\n",
-    "- Change certain paramaters such as number of folds, ncomponents (PLS), alpha and lambda values (Elastic net, Lasso, Ridge), e.g try a larger grid search \n",
+    "- Change certain paramaters such as number of folds, ncomponents (PLS), alpha and lambda values (Elastic Net, Lasso, Ridge), e.g try a larger grid search \n",
     "- Use a different dataset for a regression problem\n",
-    "- Implement different error metrics for regression\n",
-    "- Implement the classification (logistic regression) versions of these, look at examples here for [Ridge](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.RidgeClassifier.html) and [Lasso and ElasticNet](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html), and you can use a binary vector as input to [PLSRegression](https://scikit-learn.org/stable/modules/generated/sklearn.cross_decomposition.PLSRegression.html)."
+    "- Implement different error metrics for regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- Implement the classification (logistic regression) versions of these, look at examples here for [Ridge](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.RidgeClassifier.html) and [Lasso and ElasticNet](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html), and you can use a binary vector as input to [PLSRegression](https://scikit-learn.org/stable/modules/generated/sklearn.cross_decomposition.PLSRegression.html).\n",
+    "\n",
+    "Make use of LLMs by copying a small part of regression code and asking it to rewrite it for classification, what prompting produced the right results for you? Do different LLMs give you different answers, what about prompting strategy?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add your code here for classification models of PLS(DA) (Discriminant Analysis)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add your code here for classification models (logistic regression) for Ridge\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add your code here for classification models (logistic regression) for Lasso\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Add your code here for classification models (logistic regression) for Elastic Nets\n"
    ]
   },
   {
@@ -844,7 +924,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Import datasets..."
+    "# Import datasets...\n"
    ]
   },
   {
@@ -853,7 +933,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split data and perform scaling..."
+    "# Split data and perform scaling...\n"
    ]
   },
   {
@@ -862,7 +942,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate a regression or classification model..."
+    "# Calculate a regression or classification model...\n"
    ]
   },
   {
@@ -871,7 +951,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Find the important features"
+    "# Find the important features\n"
    ]
   }
  ],
@@ -891,7 +971,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.16"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
