--- a/BIDS_07_ClassificationRegression_1.ipynb
+++ b/BIDS_07_ClassificationRegression_1.ipynb
@@ -289,7 +289,7 @@
     "plt.plot(np.arange(1, 10),mse)\n",
     "plt.xlabel('Number of PLS Components')\n",
     "plt.ylabel('MSE')\n",
-    "plt.title('Cross-validation Metrics')\n"
+    "plt.title('Cross-validation Metrics')"
    ]
   },
   {
@@ -320,7 +320,6 @@
     "MAEs = [0]*n_comp\n",
     "SMAPEs = [0]*n_comp\n",
     "\n",
-    "from sklearn.model_selection import KFold\n",
     "kf = KFold(n_splits=n_split, random_state=CID, shuffle=True)\n",
     "kf.get_n_splits(X_train)\n",
     "for train_index, val_index in kf.split(X_train):\n",
@@ -329,6 +328,7 @@
     "        Xval = X_train.iloc[val_index,:]\n",
     "        Ytr = y_train.iloc[train_index]\n",
     "        Yval = y_train.iloc[val_index]\n",
+    "        # remember to apply scaling to train and val in a different way\n",
     "        scaler_cv = StandardScaler()\n",
     "        Xtr_scaled = scaler_cv.fit_transform(Xtr)\n",
     "        Xval_scaled = scaler_cv.transform(Xval)\n",
@@ -340,7 +340,7 @@
     "        r_squares[i-1] += r_square/n_split\n",
     "        MSEs[i-1] += MSE/n_split\n",
     "        MAEs[i-1] += MAE/n_split\n",
-    "        SMAPEs[i-1] += SMAPE/n_split\n"
+    "        SMAPEs[i-1] += SMAPE/n_split"
    ]
   },
   {
@@ -361,14 +361,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Calculate MSE using cross-validation, \n",
+    "# Calculate MSE using cross-validation \n",
     "numSplits = 10\n",
     "exp_var_mean = 0 \n",
     "r_square_mean = 0\n",
     "MSE_mean = 0 \n",
     "MAE_mean = 0\n",
     "SMAPE_mean = 0 \n",
-    "kf = KFold(n_splits=numSplits, random_state=CID, shuffle=False)\n",
+    "kf = KFold(n_splits=numSplits, random_state=CID, shuffle=True)\n",
     "kf.get_n_splits(X_train)\n",
     "\n",
     "for train_index, val_index in kf.split(X_train):\n",
@@ -378,17 +378,15 @@
     "    y_valcv = y_train.iloc[val_index]\n",
     "    X_traincv = scaler.fit_transform(X_traincv)\n",
     "    X_valcv = scaler.transform(X_valcv)\n",
-    "    pls = PLSRegression(n_components=2) ## i is the no. components, consider \n",
+    "    pls = PLSRegression(n_components=2) # 2 is the no. components, consider changing this as you see fit\n",
     "    pls.fit(X_traincv, y_traincv)\n",
     "    ypred = pls.predict(X_valcv)\n",
     "    exp_var, r_square, MSE, MAE, SMAPE = RegmodelPerformance(y_valcv, ypred)\n",
-    "    exp_var_mean+= exp_var\n",
+    "    exp_var_mean += exp_var\n",
     "    r_square_mean += r_square\n",
     "    MSE_mean += MSE\n",
     "    MAE_mean += MAE\n",
-    "    SMAPE_mean += SMAPE\n",
-    "    \n",
-    "    "
+    "    SMAPE_mean += SMAPE"
    ]
   },
   {
@@ -397,18 +395,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "## in the space below compute the mean and standard deviations of your metrics\n",
-    "## I have done the first one as an example\n",
-    "\n",
+    "# in the space below compute the mean and standard deviations of your metrics\n",
+    "# I have done the first two as an example\n",
     "print(exp_var_mean/numSplits)\n",
-    "print(r_square_mean/numSplits)"
+    "print(r_square_mean/numSplits)\n",
+    "# write the others MSE, MAE, SMAPE here\n",
+    "print()\n",
+    "print()\n",
+    "print()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now have a think how you might do this and optimise the number of components at the same time"
+    "Now have a think how you might do this (CV) and optimise the number of components at the same time"
    ]
   },
   {
@@ -417,19 +418,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "numSplits = 10\n",
     "exp_vars = []\n",
     "r_squares = []\n",
     "MSEs = []\n",
     "MAEs = []\n",
     "SMAPEs = [] \n",
     "# Calculate MSE using cross-validation, adding one component at a time\n",
-    "for i in range(1, 12):   #Here we are defining how many components \n",
+    "for i in range(1, 12): # Here we are defining how many components \n",
     "    exp_var_mean = 0 \n",
     "    r_square_mean = 0\n",
     "    MSE_mean = 0 \n",
     "    MAE_mean = 0\n",
     "    SMAPE_mean = 0 \n",
-    "    kf = KFold(n_splits=10, random_state=None, shuffle=False) ## can also input and value you like for random state but also set shuffle = Ture\n",
+    "    kf = KFold(n_splits=numSplits, random_state=None, shuffle=False) # can also input a value you like for the random state but then also set shuffle = True\n",
     "    kf.get_n_splits(X_train)\n",
     "\n",
     "    for train_index, val_index in kf.split(X_train):\n",
@@ -439,7 +441,7 @@
     "        y_valcv = y_train.iloc[val_index]\n",
     "        X_traincv = scaler.fit_transform(X_traincv)\n",
     "        X_valcv = scaler.fit_transform(X_valcv)\n",
-    "        pls = PLSRegression(n_components=i) ## i is the no. components\n",
+    "        pls = PLSRegression(n_components=i) # i is the no. components\n",
     "        pls.fit(X_traincv, y_traincv)\n",
     "        ypred = pls.predict(X_valcv)\n",
     "        exp_var, r_square, MSE, MAE, SMAPE = RegmodelPerformance(y_valcv, ypred)\n",
@@ -448,11 +450,11 @@
     "        MSE_mean += MSE\n",
     "        MAE_mean += MAE\n",
     "        SMAPE_mean += SMAPE\n",
-    "    exp_vars.append(exp_var_mean/10)\n",
-    "    r_squares.append(r_square_mean/10)\n",
-    "    MSEs.append(MSE_mean/10)\n",
-    "    MAEs.append(MAE_mean/10)\n",
-    "    SMAPEs.append(SMAPE_mean/10)"
+    "    exp_vars.append(exp_var_mean/numSplits)\n",
+    "    r_squares.append(r_square_mean/numSplits)\n",
+    "    MSEs.append(MSE_mean/numSplits)\n",
+    "    MAEs.append(MAE_mean/numSplits)\n",
+    "    SMAPEs.append(SMAPE_mean/numSplits)"
    ]
   },
   {
@@ -471,17 +473,20 @@
    "outputs": [],
    "source": [
     "#plot test MSE vs. number of components\n",
-    "plt.plot(range(1,12),MSEs)\n",
+    "plt.plot(range(1,len(MSEs)+1),MSEs)\n",
     "plt.xlabel('Number of PLS Components')\n",
     "plt.ylabel('MSE')\n",
-    "plt.title('Cross-validation Metrics')\n"
+    "plt.title('Cross-validation Metrics')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Results vary slightly depending on the split seed values, although it looks like the best model is the one with 4 components? Do you get the same result? Do you want to use a different metric than MSE to find the optimum?"
+    "Results vary slightly depending on the split seed values, although it looks like the best model is the one with 4 components?\n",
+    "Why is this plot different to the one above, even though the shape of the line looks the same the values are different?\n",
+    "\n",
+    "Did you get the same result? Do you want to use a different metric than MSE to find the optimum?"
    ]
   },
   {
@@ -501,6 +506,31 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "You can now compare the model performance on the independent test set with your validation results, what do you notice?\n",
+    "\n",
+    "#### Is the mean a good representative of the model performance?\n",
+    "\n",
+    "We calculated the mean performance for the different components, and based on this we concluded that there was an overall minimum.\n",
+    "However, we do not know what the spread of the different CV folds was.\n",
+    "Try to rewrite the code above to store the individual metrics in an array and when creating the figure plot both the mean and the standard deviation.\n",
+    "Different parameters that have similar means and standard deviations might be 'just as good', and you can the pick a less complex (less components) model to take forward."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Modify the code able around using CV to find the optimal number of components and save the model output in an array for each metric\n",
+    "\n",
+    "# Then visualise the code as we did above, but in addition plot error bars for each component\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Feature importance\n",
     "\n",
     "What are the most important features in the model? Inspect the ```coef_``` attribute and see which variables have the biggest (absolute) weights (loadings) in the model."
@@ -509,18 +539,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "scrolled": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "# get feature coefficients\n",
-    "coef = plsbest.coef_\n",
+    "coef = plsbest.coef_.flatten()\n",
     "# get feature names\n",
     "cnames = list(X.columns)\n",
     "# sort these\n",
-    "_, coef, cnames = zip(*sorted(zip(abs(coef), coef, cnames),reverse=True))\n",
-    "coef = np.concatenate(coef)\n",
+    "sorted_indices = np.argsort(-np.abs(coef))\n",
+    "coef = coef[sorted_indices]\n",
+    "cnames = [cnames[i] for i in sorted_indices]\n",
     "# show top 10 features\n",
     "nfeat = 10\n",
     "ind = [*range(nfeat, 0, -1)]\n",
@@ -531,6 +560,13 @@
     "ax.barh(ind,cp)\n",
     "ax.set_yticks(ind, labels=cnames[0:nfeat])\n",
     "ax.set_xlabel('PLS loading weights')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You now know the performance of your model on an independent test set (in addition to CV on itself), and you also know the most important predictors in the model as above. Moreover, you know in what direction these metabolites change based on your outcome: those with positive weights increase in concentration as BMI increases, and those that are negative decrease with increasing BMI (or increase as BMI gets lower)."
    ]
   },
   {
@@ -605,6 +641,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Do you know what we just did to obtain the feature importance we will use below?"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -614,7 +657,7 @@
     "coef = lasso.coef_\n",
     "# get feature names\n",
     "cnames = list(X.columns)\n",
-    "# sort these\n",
+    "# sort these - this uses an alternative way to sort them as we used above - multiple roads that lead to Rome...\n",
     "acoef, coef, cnames = zip(*sorted(zip(abs(coef), coef, cnames),reverse=True))\n",
     "coef = np.asarray(coef)\n",
     "nonzerofeat = sum(np.asarray(acoef)>0)\n",
@@ -735,7 +778,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Compare the Ridge results with Lasso and PLS, which model is most predictive, which are the important features?"
+    "### Compare the Ridge results with Lasso and PLS, which model is most predictive, which are the important features?\n",
+    "### Are there are surprising findings? Are all models good?"
    ]
   },
   {
@@ -767,8 +811,8 @@
     "# define grid\n",
     "grid = dict()\n",
     "grid = {\"max_iter\": [10, 50, 100],\n",
-    "                      \"alpha\": [0.0001, 0.001, 0.01, 0.1, 1, 10, 100],\n",
-    "                      \"l1_ratio\": np.arange(0.0, 1.0, 0.1)}\n",
+    "        \"alpha\": [0.0001, 0.001, 0.01, 0.1, 1, 10, 100],\n",
+    "        \"l1_ratio\": np.arange(0.0, 1.0, 0.1)}\n",
     "# define search\n",
     "search = GridSearchCV(model, grid, scoring='neg_mean_absolute_error', cv=cv, n_jobs=-1)\n",
     "# perform the search\n",
@@ -855,15 +899,18 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# add code here to use different scalers, re-use materials from earlier BIDS tutorials\n"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## How to use these for classification?\n",
     "- Implement the classification (logistic regression) versions of these, look at examples here for [Ridge](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.RidgeClassifier.html) and [Lasso and ElasticNet](https://scikit-learn.org/stable/modules/generated/sklearn.linear_model.LogisticRegression.html), and you can use a binary vector as input to [PLSRegression](https://scikit-learn.org/stable/modules/generated/sklearn.cross_decomposition.PLSRegression.html).\n",
     "\n",
-    "Make use of LLMs by copying a small part of regression code and asking it to rewrite it for classification, what prompting produced the right results for you? Do different LLMs give you different answers, what about prompting strategy?"
+    "Make use of LLMs by copying a small part of regression code and asking it to rewrite it for classification, what prompting produced the right results for you? Do different LLMs give you different answers, what about prompting strategy? What worked, what did not?"
    ]
   },
   {
@@ -971,7 +1018,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
