--- a/BIDS_07_ClassificationRegression_1.ipynb
+++ b/BIDS_07_ClassificationRegression_1.ipynb
@@ -87,7 +87,7 @@
     "# If you are using Google Colab \n",
     "# Remove the # comment below and use these instructions instead to download and open the dataset\n",
     "# !wget https://raw.github.com/ICL-BMB-BiDS/Data/main/diabetes_metabolomics_plasma.csv\n",
-    "# df = pd.read_csv(\"./diabetes_metabolomics_plasma.csv)"
+    "# df = pd.read_csv(\"./diabetes_metabolomics_plasma.csv\")"
    ]
   },
   {
